# rust-api

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: ci.yml
entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220720_000001_create_users.rs
src/: main.rs
