[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "~4.0.1"
paperclip = { version = "0.7.0", features = ["actix4"] }
sea-orm = { version = "0.9.0", features = ["debug-print", "runtime-actix-native-tls", "sqlx-mysql"] }
serde = { version = "~1.0.136", features = ["derive"] }
migration = { path = "migration" }
