[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "~4.3.1"
paperclip = { version = "0.8.0", features = ["actix4"] }
# sea-orm = { version = "0.9.0", features = ["debug-print", "runtime-actix-native-tls", "sqlx-mysql"] }
serde = { version = "~1.0.158", features = ["derive"] }
entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.sea-orm]
# path = "../../"
version = "^0.11.1" # sea-orm version
features = [
  "debug-print",
  "runtime-actix-native-tls",
  "sqlx-mysql",
]
